pin/ line resize alignment mismatch fix

--- a/@navikt/internal/css/timeline.css
+++ b/@navikt/internal/css/timeline.css
@@ -124,23 +124,25 @@
   position: absolute;
   top: 0;
   z-index: 2;
+  height: 100%;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .navdsi-timeline__pin__button {
   cursor: pointer;
   background: #fff;
-  border: 4px solid var(--navds-global-color-red-500);
+  border: 3px solid var(--navds-global-color-red-500);
   z-index: 2;
   border-radius: var(--navds-border-radius-full);
   padding: 2.5px;
 }
 
-.navdsi-timeline__pin__button::before {
+.navdsi-timeline__pin__wrapper::before {
   content: " ";
-  top: 100%;
-  left: 6.5px;
-  height: 100px;
+  top: 13px;
+  height: calc(100% - 13px);
   width: 1px;
-  position: absolute;
+  margin: 0 auto;
   background: var(--navds-global-color-gray-900);
 }
